test/classes/initializers/errors/errHandling/initWithTry2.good
initWithTry2.chpl:7: In initializer:
initWithTry2.chpl:9: error: Only catch-less try! statements are allowed in initializers for now
